--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css" />
   <title>Event.Task4</title>
+  <script defer type="module" src="indexClass.js"></script>
 </head>
 <body>
   <div id="tasks">
@@ -23,7 +24,5 @@
       <div class="tasks-list"></div>
     </div>
   </div>
-
-  <script type="module" src="index.js"></script>
 </body>
 </html>
